# kapine

./: .gitignore  .gitmodules  README.md
Arduino/kiihdytin_photogate_test/: README.md
Arduino/linear_prototype/: linear_prototype.ino
KiihdytinControlPanel/: build.gradle  pom.xml  settings.gradle
KiihdytinControlPanel/gradle/wrapper/: gradle-wrapper.properties
KiihdytinControlPanel/src/main/java/otto/: AcceleratorStatusCanvas.java  App.java  ChecksumCalculator.java  DataPacket.java  MainApp.java  SerialDataListener.java  SerialInterface.java
KiihdytinControlPanel/src/main/java/otto/kiihdytincontrolpanel/: FXMLController.java  MainApp.java  SerialLatencyTest.java
KiihdytinControlPanel/src/main/resources/fxml/: ControlPanel.fxml  Scene.fxml
KiihdytinControlPanel/src/main/resources/styles/: Styles.css
fw/motherboard/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
fw/motherboard/.cargo/: config  config.toml
fw/motherboard/src/: main.rs
hw/libraries/symbols/: BTS50451EJAXUMA1.lib
hw/motherboard/cubemx/: cubemx.ioc
hw/motherboard/main/: fp-lib-table  main-cache.lib  main-rescue.kicad_sym  main.kicad_pcb  main.kicad_pro  main.kicad_sch  main.pro  main.sch  main.sch-bak  power.kicad_sch  power.sch  power.sch-bak  rgb.kicad_sch  rgb.sch  rgb.sch-bak  sym-lib-table  uart.kicad_sch  uart.sch  uart.sch-bak
hw/motherboard/main/plots/: main-B_Cu.gbr  main-B_Mask.gbr  main-B_SilkS.gbr  main-Edge_Cuts.gbr  main-F_Cu.gbr  main-F_Mask.gbr  main-F_SilkS.gbr  main-GND.gbr  main-NPTH.drl  main-PTH.drl  main-VDD.gbr
hw/relelauta/: fp-info-cache  fp-lib-table  relelauta-cache.lib  relelauta.sch  verkkuukkeli.kicad_mod
hw/relelauta/plots/: relelauta-B_Mask.gbr  relelauta-B_SilkS.gbr  relelauta-F_Cu.gbr  relelauta-F_Mask.gbr  relelauta-PTH.drl
hw/relelauta/v1/relelauta/: relelauta.kicad_pcb  relelauta.pro  relelauta.sch  verkkuukkeli_negative.kicad_mod
hw/relelauta/v1/relelauta/RELE2/: RY5W-K.kicad_mod  verkkuukkeli.kicad_mod
hw/relelauta/v1/relelauta/plots/: relelauta-B_Cu.gbr  relelauta-Edge_Cuts.gbr  relelauta-F_SilkS.gbr  relelauta-NPTH.drl
hw/relelauta/v2/relelauta/: fp-info-cache  fp-lib-table  relelauta-cache.lib  relelauta-rescue.kicad_sym  relelauta.kicad_pcb  relelauta.kicad_pro  relelauta.kicad_sch  relelauta.pro  relelauta.sch  rgb.kicad_sch  rgb.sch  sym-lib-table
hw/relelauta/v2/relelauta/relelauta.pretty/: TO-220-3_HeatSink.kicad_mod
hw/scu/main/: main-cache.lib  main-rescue.kicad_sym  main.kicad_pcb  main.kicad_pro  main.kicad_sch  main.sch  main.sch-bak
hw/sensorilauta/: fp-info-cache  sensorilauta-cache.lib  sensorilauta-rescue.kicad_sym  sensorilauta.kicad_pcb  sensorilauta.kicad_pro  sensorilauta.kicad_sch  sensorilauta.pro  sensorilauta.sch  sensorilauta.sch-bak  sym-lib-table
kiihdytin/: kiihdytin.ino
kiihdytin_photogate_test/: kiihdytin_photogate_test.ino
pc_serial/: Cargo.toml
pc_serial/src/: lib.rs  main.rs
