[package]
authors = ["Verneri Hirvonen <verneri.hirvonen.2@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "motherboard"
version = "0.1.0"

[dependencies]
cortex-m-semihosting = "0.3.7"
kapine-packet = { version = "0.1.5", git = "https://github.com/chiplet/kapine-packet.git" }

# panic behavior
panic-semihosting = "0.5.6"

cortex-m-rtic = "0.5.7"

[dependencies.stm32f3xx-hal]
version = "0.6.1"
features = ["rt", "stm32f303xe"]


# this lets you use `cargo fix`!
[[bin]]
name = "motherboard"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
