[package]
authors = ["Verneri Hirvonen <verneri.hirvonen.2@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "motherboard"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-semihosting = "0.3.7"
nb = "1.0.0"
kapine-packet = { version = "0.2.2", git = "https://github.com/chiplet/kapine-packet.git" }

# panic behavior
panic-semihosting = "0.5.6"

cortex-m-rtic = "0.5.7"
heapless = "0.7.3"

[dependencies.stm32f3xx-hal]
git = "https://github.com/stm32-rs/stm32f3xx-hal"
rev = "937f4fa904fdddf0ae1dbdf85dbfdf25483b74f7"
features = ["rt", "stm32f303xe"]


# this lets you use `cargo fix`!
[[bin]]
name = "motherboard"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
